fix the input checkbox is not align with the authentication text

--- a/src/pages/SignUpStyles.css
+++ b/src/pages/SignUpStyles.css
@@ -1,12 +1,22 @@
 .authentication-container {
     position: relative;
     top: 50px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.align-text-center {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 2px;
 }
 
 .authentication-text{
-    position: relative;
-    left: 10px;
+    /* position: relative;
+    left: 10px; */
     font-size: 16px;
+    margin-left: 10px;
+    
 }
 
 .butt-position {
@@ -17,4 +27,9 @@
 .already-acc {
     position: relative;
     top: 100px;
+}
+
+.form-check-input {
+    width: 20px; 
+    height: 20px; 
 }
